# Protobufs-Shenanigans-

./: README.md  meson.build
.vscode /: launch.json  settings.json  tasks.json
array_example/: arrays.pb.c  arrays.pb.h  arrays.proto  pressuredecode.c  pressureencode.c
nanopb_example/: main.c  message.pb.h  message.proto
pressure_example/: decode.c  encode.c  pres.pb.c  pres.pb.h  pres.proto
pressure_example/meson-info/: meson-info.json
pressure_example/meson-logs/: meson-log.txt
